[project]
name = "journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.10.6",
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "python-decouple>=3.8",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*"]